# air-sensor

./: .gitignore  alembic.ini  pins.org  pyproject.toml
.github/workflows/: deploy-server.yml  static.yml
alembic/: env.py
alembic/versions/: 26c354c4f337_initial_tables.py
firmware/: .gitignore  makefile  sensor.yaml
frontend/: index.html  makefile  sensors.js
server/: models.py  schemas.py  server.py
tests/: discovery_messages.json  test_db.py  test_discovery.py
tests/test_discovery/: test_parse_discovey_msg1_.yml  test_parse_discovey_msg2_.yml  test_parse_discovey_msg3_.yml  test_parse_discovey_msg4_.yml  test_parse_discovey_msg5_.yml  test_parse_discovey_msg6_.yml
