[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
fastapi-mqtt = "^1.0.7"
SQLAlchemy = "^2.0.9"
httpx = "^0.24.0"
sqlalchemy-utc = "^0.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.0"
pytest-sugar = "^0.9.7"
pytest-regressions = "^2.4.2"
httpx = "^0.24.0"
rich = "^13.3.4"
alembic = "^1.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
